--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <meta content="ie=edge" http-equiv="x-ua-compatible">
     <link rel="shortcut icon" href="/assets/img/favicon.png" type="image/png">
     <link rel="stylesheet" href="/assets/css/foundation.css">
+    <link rel="stylesheet" href="/assets/css/notexisting.css">
     <link rel="stylesheet" href="/assets/css/app.css">
     <script src="/assets/js/app.js" defer></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAQRP-JOgHWIl8EjvfENLvYuhfwccfx6KQ" async defer></script><!--[if lt IE 9]>
